manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: default
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
