manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: nginx
  rules:
  - host: spylyp-test-domain.uk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: test-svc
            port: 
              number: 5000
  tls:
  - hosts:
    - spylyp-test-domain.uk
    secretName: spylyp-test-domain.uk
